[NET-910] Made scrollbar for tabs thinner, added a dropdown menu to exclude tabs from view, fixed tabs not updating when switching from objects

--- a/app/src/app/framework/object/components/object-references/object-references.component.scss
+++ b/app/src/app/framework/object/components/object-references/object-references.component.scss
@@ -4,8 +4,13 @@
   flex-wrap: nowrap;
 }
 
+.nav-tabs::-webkit-scrollbar {
+  height: 5px;
+}
+
 .container {
   max-width: 80vw;
+  padding: 0;
   margin-bottom: 5px;
   display: block;
 }
